--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "rollup-plugin-index-html": "^1.5.9",
     "wct-mocha": "^1.0.0",
     "web-component-analyzer": "^0.1.20",
-    "web-component-tester": "^6.9.2"
+    "web-component-tester": "^6.9.2",
+    "rollup-plugin-stylesheet-inliner": "^0.1.0"
   },
   "scripts": {
     "setup": "npm install",
